--- a/Rate.html
+++ b/Rate.html
@@ -91,67 +91,67 @@
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="RAMPS" value="Bike">
+                            <input type="checkbox" name="values[]" value="RAMPS">
                           </div></td>
                           <td>Are there adequate ramps?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="THEIGHTS" value="Bike">
+                            <input type="checkbox" name="values[]" value="THEIGHTS">
                           </div></td>
                           <td>Are the tables adequately high?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="BATHROOM" value="Bike">
+                            <input type="checkbox" name="values[]" value="BATHROOM">
                           </div></td>
                           <td>Is the bathroom accessible?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="POOLLIFTS" value="Bike">
+                            <input type="checkbox" name="values[]" value="POOLLIFTS">
                           </div></td>
                           <td>Are there pool lifts? </td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="RESTAURANT" value="Bike">
+                            <input type="checkbox" name="values[]" value="RESTAURANT">
                           </div></td>
                           <td>Is the restaurant accessible?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="CURBS" value="Bike">
+                            <input type="checkbox" name="values[]" value="CURBS">
                           </div></td>
                           <td>Are there curbs?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="SHUTTLE" value="Bike">
+                            <input type="checkbox" name="values[]" value="SHUTTLE">
                           </div></td>
                           <td>Is there shuttle access available?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="LIFTS" value="Bike">
+                            <input type="checkbox" name="values[]" value="LIFTS">
                           </div></td>
                           <td>Are there transportation lifts?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="VELCRO" value="Bike">
+                            <input type="checkbox" name="values[]" value="VELCRO">
                           </div></td>
                           <td>Is there velcro?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="TEMP" value="Bike">
+                            <input type="checkbox" name="values[]" value="TEMP">
                           </div></td>
                           <td>Can temperature be easily controlled?</td>
                         </tr>
                         <tr>
                           <td><div align="right">
-                            <input type="checkbox" name="DWIDTH" value="Bike">
+                            <input type="checkbox" name="values[]" value="DWIDTH">
                           </div></td>
                           <td>Are doors adequately wide?</td>
                         </tr>
