--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 });
 
                 var marker = new google.maps.Marker({
+                    map: map,
+                    draggable: true,
+                    animation: google.maps.Animation.DROP,
+                    position: {lat: -82.327, lng: 27.94}
                 });
 
                 var infoWindow = new google.maps.InfoWindow({map: map});
