--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     // Browser doesn't support Geolocation
                     handleLocationError(false, infoWindow, map.getCenter());
                 }     // NOTE: This uses cross-domain XHR, and may not work on older browsers.
-                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/google.json');
+                map.data.loadGeoJson('http://ec2-54-211-67-125.compute-1.amazonaws.com/searchName?name=starbucks');
             }
 
             function handleLocationError(browserHasGeolocation, infoWindow, pos) {
